Atualização: mobile-hero

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="src/css/variables.css">
     <link rel="stylesheet" href="src/css/global.css">
     <link rel="stylesheet" href="src/css/header.css">
+    <link rel="stylesheet" href="src/css/main.css">
 
     <title>Frontend Mentor | Intro section with dropdown navigation</title>
   </head>
@@ -88,7 +89,23 @@
           <button>Register</button>
         </div>
       </nav>
-    </header>    
+    </header>
+    <main>
+      <img src="src/images/image-hero-mobile.png" alt="hero mobile" class="hero-mobile">
+      <div class="text">
+        <h1 class="title">Make remote work</h1>
+        <p class="paragraph">
+          Get your team in sync, no matter your location. Streamline processes, create team rituals, and watch productivity soar.
+        </p>
+        <button>Learn more</button>
+      </div>
+      <div class="brands">
+        <img src="src/images/client-databiz.svg" alt="databiz" class="databiz">
+        <img src="src/images/client-audiophile.svg" alt="audiophile" class="audiophile">
+        <img src="src/images/client-meet.svg" alt="meet" class="meet">
+        <img src="src/images/client-maker.svg" alt="maker" class="maker">
+      </div>
+    </main>    
     <script src="src/js/index.js"></script>
   </body>
 </html>
